--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
